--- a/tutorials/ApiAndModel/ApiAndModel/Base.lproj/Main.storyboard
+++ b/tutorials/ApiAndModel/ApiAndModel/Base.lproj/Main.storyboard
@@ -29,10 +29,16 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O5T-k9-hE6" customClass="AutoCompleteTextField" customModule="ApiAndModel" customModuleProvider="target">
+                                <rect key="frame" x="41" y="261" width="97" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="cityList" destination="O5T-k9-hE6" id="UoD-nO-pYd"/>
                         <outlet property="getForecast" destination="jRE-aR-hC7" id="tq2-Nc-csL"/>
                         <outlet property="locationStatus" destination="U4E-H9-ehL" id="wxo-5q-lKc"/>
                     </connections>
