--- a/tutorials/ParseData/ParseData/Base.lproj/Main.storyboard
+++ b/tutorials/ParseData/ParseData/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="UNt-zh-j2o">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="UNt-zh-j2o">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
@@ -17,7 +17,7 @@
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wS5-4u-bKL" id="XVr-U6-2dk">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -27,11 +27,80 @@
                             <outlet property="delegate" destination="quk-Xo-kBe" id="ecz-W3-mZP"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="tKx-db-KJ1"/>
+                    <navigationItem key="navigationItem" id="tKx-db-KJ1">
+                        <barButtonItem key="leftBarButtonItem" title="+" id="YyS-u1-2Sp">
+                            <connections>
+                                <segue destination="E3U-0K-l9J" kind="show" id="jox-K0-z6D"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E5R-DH-w1H" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1855" y="502"/>
+        </scene>
+        <!--New Do View Controller-->
+        <scene sceneID="UOu-9l-YxL">
+            <objects>
+                <viewController id="E3U-0K-l9J" customClass="NewDoViewController" customModule="ParseData" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KsO-bc-UEx"/>
+                        <viewControllerLayoutGuide type="bottom" id="DVZ-un-sJg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="np1-yI-bFa">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nRQ-4Y-bsO">
+                                <rect key="frame" x="110" y="222" width="338" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="voF-C6-HC5">
+                                <rect key="frame" x="110" y="161" width="98" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HkQ-Qj-y7J">
+                                <rect key="frame" x="68" y="165" width="34" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Note" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1JX-2t-qLC">
+                                <rect key="frame" x="65" y="226" width="37" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="69C-4X-b3x">
+                                <rect key="frame" x="-20" y="280" width="620" height="216"/>
+                                <date key="date" timeIntervalSinceReferenceDate="467687236.07310301">
+                                    <!--2015-10-28 01:07:16 +0000-->
+                                </date>
+                            </datePicker>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fjh-4O-xAH">
+                                <rect key="frame" x="350" y="161" width="98" height="30"/>
+                                <state key="normal" title="Add NewDo"/>
+                                <connections>
+                                    <action selector="addTodo:" destination="E3U-0K-l9J" eventType="touchUpInside" id="cvZ-06-mku"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Fjh-4O-xAH" firstAttribute="centerY" secondItem="np1-yI-bFa" secondAttribute="centerY" constant="-124" id="Pia-RE-h7k"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="dueDatePicker" destination="69C-4X-b3x" id="ovY-tZ-kUq"/>
+                        <outlet property="noteInput" destination="nRQ-4Y-bsO" id="WnO-sg-psD"/>
+                        <outlet property="titleINput" destination="voF-C6-HC5" id="ZpD-y9-Sxd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lGE-Ag-xWg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2492" y="383"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="WQo-Qj-mml">
